[package]
name = "chuchi-crypto"
description = "Crypto library providing encryption and signing."
version = "0.1.2"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/chuchi-dev/chuchi-crypto"
homepage = "https://chuchi.dev/"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "signature", "cipher"]
categories = ["cryptography"]
rust-version = "1.67"

[package.metadata.docs.rs]
all-features = true

[features]
cipher = [
	"zeroize",
	"poly1305",
	"universal-hash",
	"chacha20",
	"x25519-dalek",
	"generic-array",
]
signature = ["ed25519-dalek"]

b64 = ["base64"]
serde = ["_serde"]
hash = ["blake2", "generic-array"]
protobuf = ["dep:protopuffer"]
postgres = ["dep:postgres-types", "dep:bytes"]

[dependencies]
#cipher
zeroize = { version = "1.6", optional = true }
poly1305 = { version = "0.8", optional = true }
universal-hash = { version = "0.5", optional = true }
chacha20 = { version = "0.9", optional = true }
x25519-dalek = { version = "2.0", optional = true, features = [
	"static_secrets",
] }

#signature
ed25519-dalek = { version = "2.0", optional = true, features = [
	"zeroize",
	"rand_core",
] }

#hash
blake2 = { version = "0.10", optional = true }

rand = "0.8"

generic-array = { version = "0.14", optional = true }
base64 = { version = "0.21", optional = true }
_serde = { package = "serde", version = "1.0", optional = true }

protopuffer = { version = "0.1", optional = true }
postgres-types = { version = "0.2", optional = true }
bytes = { version = "1.6", optional = true }
