[package]
name = "chuchi-crypto"
description = "Crypto library providing encryption and signing."
version = "0.2.0-pre.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/chuchi-dev/chuchi-crypto"
homepage = "https://chuchi.dev/"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "signature", "cipher"]
categories = ["cryptography"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[features]
cipher = [
	"zeroize",
	"poly1305",
	"universal-hash",
	"chacha20",
	"x25519-dalek",
	"hybrid-array",
]
signature = ["ed25519-dalek"]

b64 = ["base64"]
serde = ["_serde"]
hash = ["blake2", "hybrid-array"]
protobuf = ["dep:protopuffer"]
postgres = ["dep:postgres-types", "dep:bytes"]

[dependencies]
#cipher
zeroize = { version = "1.6", optional = true }
poly1305 = { version = "0.9.0-rc.2", optional = true }
universal-hash = { version = "0.6.0-rc.2", optional = true }
chacha20 = { version = "0.10.0-rc.2", optional = true, features = ["xchacha"] }
x25519-dalek = { version = "3.0.0-pre.1", optional = true, features = [
	"static_secrets",
] }

#signature
ed25519-dalek = { version = "3.0.0-pre.1", optional = true, features = [
	"zeroize",
	"rand_core",
] }

#hash
blake2 = { version = "0.11.0-rc.2", optional = true }

rand = "0.9"

hybrid-array = { version = "0.4.5", optional = true }
base64 = { version = "0.22.1", optional = true }
_serde = { package = "serde", version = "1.0", optional = true }

protopuffer = { version = "0.1", optional = true }
postgres-types = { version = "0.2", optional = true }
bytes = { version = "1.6", optional = true }
